# project_marketplace_2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: celery_worker.py  dependencies.py  main.py
app/core/: config_file.py  database.py  redis.py
app/models/: user.py
app/repo/: db_base.py  repo_redis.py  repo_user.py  token.py
app/routes/: auth.py
app/schemas/: user.py
app/services/: mail_service.py  security_service.py  token_service.py  user_service.py
app/tasks/: email.py
