[project]
name = "project-marketplace-2"
version = "0.1.0"
description = ""
authors = [
    {name = "alberta-f",email = "delyasalakhova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic[email] (>=2.11.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "boto3 (>=1.37.23,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "aiosmtplib (>=4.0.0,<5.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pre-commit = "^4.2.0"
alembic = "^1.15.2"
mypy = "^1.15.0"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic", "migrations", ".venv"]

select = ["E", "F", "I"]   # E: pycodestyle, F: pyflakes, I: isort
fix = true                 # включим автофиксы при запуске

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
exclude = ["alembic", "tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
